added comments in css

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -142,7 +142,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/*these all all the same I should condense them*/
 .search-engine-optimization img {
     max-height: 200px;
 }
